<resources>
    <string name="app_name">Calculador</string>
    <string name="number">0</string>
    <string name="numberOne">1</string>
    <string name="numberTwo">2</string>
    <string name="numberThree">3</string>
    <string name="numberFour">4</string>
    <string name="numberFive">5</string>
    <string name="numberSix">6</string>
    <string name="numberSeven">7</string>
    <string name="numberEight">8</string>
    <string name="numberNine">9</string>
    <string name="btn_plus">+</string>
    <string name="btn_rest">-</string>
    <string name="btn_point">.</string>
    <string name="btn_er">C</string>
    <string name="btn_eq">=</string>

</resources>
