<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="calculador.miguel.example.com.calculador.MainActivity"
    android:orientation="vertical">

    <TextView
        style="@style/txt_1"
        />

    <LinearLayout
        style="@style/vie_t">
        <LinearLayout
            style="@style/vie_p">
            <Button
                android:text="@string/numberSeven"
                style="@style/btn">
            </Button>
            <Button
                android:text="@string/numberEight"
                style="@style/btn">
            </Button>
            <Button
                android:text="@string/numberNine"
                style="@style/btn">
            </Button>
            <Button
                android:text="@string/btn_plus"
                style="@style/btn">
            </Button>
        </LinearLayout>
        <LinearLayout
            style="@style/vie_p">
            <Button
                android:text="@string/numberFour"
                style="@style/btn">
            </Button>
            <Button
                android:text="@string/numberFive"
                style="@style/btn">
            </Button>
            <Button
                android:text="@string/numberSix"
                style="@style/btn">
            </Button>
            <Button
                android:text="@string/btn_rest"
                style="@style/btn">
            </Button>
        </LinearLayout>
        <LinearLayout
            style="@style/vie_p">
            <Button
                android:text="@string/numberOne"
                style="@style/btn">
            </Button>
            <Button
                android:text="@string/numberTwo"
                style="@style/btn">
            </Button>
            <Button
                android:text="@string/numberThree"
                style="@style/btn">
            </Button>
            <Button
                android:text="@string/btn_er"
                style="@style/btn">
            </Button>
        </LinearLayout>
        <LinearLayout
            style="@style/vie_p">
            <Button
                android:text="@string/number"
                android:layout_weight="2"
                style="@style/btn">
            </Button>
            <Button
                android:text="@string/btn_point"
                style="@style/btn">
            </Button>
            <Button
                android:text="@string/btn_eq"
                style="@style/btn"
                android:background="@color/btn_i">
            </Button>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
